--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ INTERNVL_ENV=discovery
 
 # Base project path - all other paths can be derived from this
 INTERNVL_PATH=/Users/tod/Desktop/internvl_synthetic_src
+# INTERNVL_PATH=/home/jovyan/nfs_share/tod/internvl_PoC
 
 # Base paths for different resource types
 INTERNVL_DATA_PATH=${INTERNVL_PATH}/data
@@ -37,6 +38,7 @@ INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 
 # Path/name of the InternVL model to use
 INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B
+# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B
 
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
