fix: Correct project path in .env and update image folder path in configuration

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ INTERNVL_ENV=discovery
 # REQUIRED: These paths must be set with absolute paths
 
 # Base project path - all other paths can be derived from this
-INTERNVL_PATH=/Users/tod/Desktop/tod/internvl_PoC
+INTERNVL_PATH=/Users/tod/Desktop/internvl_PoC
 # INTERNVL_PATH=/home/jovyan/nfs_share/tod/internvl_PoC
 
 # Base paths for different resource types
@@ -31,7 +31,7 @@ INTERNVL_SOURCE_PATH=${INTERNVL_PATH}
 INTERNVL_SYNTHETIC_DATA_PATH=${INTERNVL_DATA_PATH}/synthetic
 
 # Path to the folder containing images to process
-INTERNVL_IMAGE_FOLDER_PATH=${INTERNVL_SYNTHETIC_DATA_PATH}/test/images
+INTERNVL_IMAGE_FOLDER_PATH=${INTERNVL_SYNTHETIC_DATA_PATH}/images
 
 # Base name for output files
 INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
