:recycle: Update .env and README.md for remote environment configuration, adding PYTHONPATH and adjusting paths for shared usage

--- a/.env
+++ b/.env
@@ -18,8 +18,11 @@ INTERNVL_ENV=discovery
 # REQUIRED: These paths must be set with absolute paths
 
 # Base project path - all other paths can be derived from this
-INTERNVL_PATH=/Users/tod/Desktop/internvl_PoC
-# INTERNVL_PATH=/home/jovyan/nfs_share/tod/internvl_PoC
+# INTERNVL_PATH=/Users/tod/Desktop/internvl_PoC  # Local development path (Tod's machine)
+INTERNVL_PATH=/home/jovyan/nfs_share/tod/internvl_PoC  # Remote shared environment path
+
+# PYTHONPATH for module imports (must match project root)
+PYTHONPATH=${INTERNVL_PATH}  # Will use the value of INTERNVL_PATH
 
 # Base paths for different resource types
 INTERNVL_DATA_PATH=${INTERNVL_PATH}/data
@@ -37,8 +40,8 @@ INTERNVL_IMAGE_FOLDER_PATH=${INTERNVL_SYNTHETIC_DATA_PATH}/images
 INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 
 # Path/name of the InternVL model to use
-INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B
-# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B
+# INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
+INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B  # Remote shared path
 
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
