:recycle: Update .env and README.md to improve environment variable configuration and suppress transformer warnings

--- a/.env
+++ b/.env
@@ -51,12 +51,15 @@ INTERNVL_IMAGE_SIZE=448
 INTERNVL_MAX_TILES=8
 
 # --------------------------------------------------------------------------
-# INFERENCE CONFIGURATION 
+# INFERENCE CONFIGURATION
 # --------------------------------------------------------------------------
 # Fewer workers for development machines
 INTERNVL_MAX_WORKERS=6
 INTERNVL_MAX_TOKENS=1024
 INTERNVL_DO_SAMPLE=False
+
+# Suppress transformers library warnings (ERROR, WARNING, INFO, DEBUG)
+INTERNVL_TRANSFORMERS_LOG_LEVEL=ERROR
 
 # --------------------------------------------------------------------------
 # OUTPUT CONFIGURATION
