--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # ==========================================================================
 # This file is a template for the .env configuration file.
 # Copy this file to .env in the project root and update the paths.
-# ALL PATHS MUST BE ABSOLUTE.
+# Paths can be relative to the project root for KFP compatibility.
 
 # --------------------------------------------------------------------------
 # ENVIRONMENT CONFIGURATION
@@ -15,31 +15,26 @@ INTERNVL_ENV=discovery
 # --------------------------------------------------------------------------
 # PATH CONFIGURATION
 # --------------------------------------------------------------------------
-# REQUIRED: These paths must be set with absolute paths
+# REQUIRED: These paths can be relative to INTERNVL_PROJECT_ROOT for KFP compatibility
 
-# Base project path - all other paths can be derived from this
-INTERNVL_PATH=/Users/tod/Desktop/internvl_PoC  # Local development path (Tod's machine)
-# INTERNVL_PATH=/home/jovyan/nfs_share/tod/internvl_PoC  # Remote shared environment path
+# Base paths (all relative to project root)
+INTERNVL_PROJECT_ROOT=.
+INTERNVL_DATA_PATH=data
+INTERNVL_OUTPUT_PATH=output
+INTERNVL_SOURCE_PATH=src
+INTERNVL_PROMPTS_PATH=prompts.yaml
 
-# PYTHONPATH for module imports (must match project root)
-PYTHONPATH=${INTERNVL_PATH}  # Will use the value of INTERNVL_PATH
-
-# Base paths for different resource types
-INTERNVL_DATA_PATH=${INTERNVL_PATH}/data
-INTERNVL_MODELS_PATH=${INTERNVL_PATH}/models
-INTERNVL_OUTPUT_PATH=${INTERNVL_PATH}/output
-INTERNVL_SOURCE_PATH=${INTERNVL_PATH}
-
-# Synthetic dataset paths
+# Derived paths
 INTERNVL_SYNTHETIC_DATA_PATH=${INTERNVL_DATA_PATH}/synthetic
-
-# Path to the folder containing images to process
+INTERNVL_SROIE_DATA_PATH=${INTERNVL_DATA_PATH}/sroie
 INTERNVL_IMAGE_FOLDER_PATH=${INTERNVL_SYNTHETIC_DATA_PATH}/images
 
 # Base name for output files
 INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 
 # Path/name of the InternVL model to use
+# NOTE: This is typically an absolute path that cannot be relative to the project
+# For KFP, this will need to be configured in the pipeline dynamically
 INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
 # INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B  # Remote shared path
 
@@ -70,8 +65,8 @@ INTERNVL_SAVE_PREDICTIONS=true
 # --------------------------------------------------------------------------
 # PROMPT TEMPLATE
 # --------------------------------------------------------------------------
-# The path to the YAML file containing prompts
-INTERNVL_PROMPTS_PATH=${INTERNVL_PATH}/prompts.yaml
+# The path to the YAML file containing prompts (already set above)
+# INTERNVL_PROMPTS_PATH is already defined to prompts.yaml
 
 # The name of the prompt to use from the YAML file
 INTERNVL_PROMPT_NAME=default_receipt_prompt
