🔥 Remove shell scripts and standardize on Python module invocation pattern

--- a/.env
+++ b/.env
@@ -35,8 +35,8 @@ INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 # Path/name of the InternVL model to use
 # NOTE: This is typically an absolute path that cannot be relative to the project
 # For KFP, this will need to be configured in the pipeline dynamically
-INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
-# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B  # Remote shared path
+# INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
+INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B  # Remote shared path
 
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
