Refactor project structure and update dependencies
- Updated `internvl_env.yml` to pin NumPy to version 1.26.0 for compatibility.
- Added new CLI interface dependencies: `typer` and `rich`.
- Removed unused configuration modules from `src/internvl/config`, `src/internvl/evaluation`, `src/internvl/extraction`, and `src/internvl/image`.
- Deleted `loader.py` from `src/internvl/model` as it was no longer needed.
- Removed legacy scripts for project structure creation and batch/single image processing.
- Updated `prompts.yaml` to include additional prompts for various use cases.

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ INTERNVL_ENV=discovery
 INTERNVL_PROJECT_ROOT=.
 INTERNVL_DATA_PATH=data
 INTERNVL_OUTPUT_PATH=output
-INTERNVL_SOURCE_PATH=src
+INTERNVL_SOURCE_PATH=internvl
 INTERNVL_PROMPTS_PATH=prompts.yaml
 
 # Derived paths
@@ -36,7 +36,10 @@ INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 # NOTE: This is typically an absolute path that cannot be relative to the project
 # For KFP, this will need to be configured in the pipeline dynamically
 # INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
-INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/InternVL2_5-1B  # Remote shared path
+# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/InternVL2_5-1B  # Remote shared path
+INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-1B
+# INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-8B
+# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/InternVL3-8B
 
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
@@ -69,4 +72,13 @@ INTERNVL_SAVE_PREDICTIONS=true
 # INTERNVL_PROMPTS_PATH is already defined to prompts.yaml
 
 # The name of the prompt to use from the YAML file
-INTERNVL_PROMPT_NAME=default_receipt_prompt
+# INTERNVL_PROMPT_NAME=default_receipt_prompt
+
+# Use original Huaifeng prompts for compatibility
+INTERNVL_PROMPT_NAME=huaifeng_receipt_json_prompt
+
+# Use Australian-optimized prompts for production
+# INTERNVL_PROMPT_NAME=australian_optimized_prompt
+
+# Use for conference document analysis
+# INTERNVL_PROMPT_NAME=conference_relevance_prompt
