:sparkles: Update model loading to support HuggingFace model IDs and improve cache path handling

--- a/.env
+++ b/.env
@@ -33,13 +33,19 @@ INTERNVL_IMAGE_FOLDER_PATH=${INTERNVL_SYNTHETIC_DATA_PATH}/images
 INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 
 # Path/name of the InternVL model to use
-# NOTE: This is typically an absolute path that cannot be relative to the project
+# NOTE: This can be either a HuggingFace model ID or an absolute path
 # For KFP, this will need to be configured in the pipeline dynamically
 # INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL2_5-1B  # Local development path
 # INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/InternVL2_5-1B  # Remote shared path
-INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-1B
+# INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-1B
 # INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-8B
-# INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/InternVL3-8B
+
+# Use HuggingFace model ID for cached models
+INTERNVL_MODEL_PATH=OpenGVLab/InternVL3-8B
+
+# HuggingFace cache directory (where the model is actually stored)
+TRANSFORMERS_CACHE=/home/jovyan/nfs_share/models/huggingface
+HF_HOME=/home/jovyan/nfs_share/models/huggingface
 
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
