:bug: Fix model loading to use actual cache path for HuggingFace models and improve logging for local file usage

--- a/.env
+++ b/.env
@@ -40,8 +40,8 @@ INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 # INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-1B
 # INTERNVL_MODEL_PATH=/Users/tod/PretrainedLLM/InternVL3-8B
 
-# Use HuggingFace model ID for cached models
-INTERNVL_MODEL_PATH=OpenGVLab/InternVL3-8B
+# Use the actual cache path for local-only loading
+INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/models--OpenGVLab--InternVL3-8B
 
 # HuggingFace cache directory (where the model is actually stored)
 TRANSFORMERS_CACHE=/home/jovyan/nfs_share/models/huggingface
