:sparkles: Add offline mode configuration for HuggingFace datasets and transformers

--- a/.env
+++ b/.env
@@ -47,6 +47,10 @@ INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/huggingface/hub/models--OpenGV
 TRANSFORMERS_CACHE=/home/jovyan/nfs_share/models/huggingface
 HF_HOME=/home/jovyan/nfs_share/models/huggingface
 
+# Force offline mode to use only cached files
+HF_DATASETS_OFFLINE=1
+TRANSFORMERS_OFFLINE=1
+
 # --------------------------------------------------------------------------
 # IMAGE PREPROCESSING PARAMETERS
 # --------------------------------------------------------------------------
