:bug: Remove unused HuggingFace cache directory paths from .env configuration

--- a/.env
+++ b/.env
@@ -43,11 +43,7 @@ INTERNVL_OUTPUT_FILE_NAME=ato_extracted_info_
 # Use clean extracted model directory (no more storage mapping!)
 INTERNVL_MODEL_PATH=/home/jovyan/nfs_share/models/InternVL3-8B
 
-# HuggingFace cache directory (where the model is actually stored)
-TRANSFORMERS_CACHE=/home/jovyan/nfs_share/models/huggingface
-HF_HOME=/home/jovyan/nfs_share/models/huggingface
-
-# Force offline mode to use only cached files
+# Force offline mode to prevent unwanted downloads
 HF_DATASETS_OFFLINE=1
 TRANSFORMERS_OFFLINE=1
 
