:sparkles: Update prompts for simplified model testing; replace Australian optimized prompt with minimal SROIE prompt for direct JSON output

--- a/prompts.yaml
+++ b/prompts.yaml
@@ -241,3 +241,17 @@ document_description_prompt: |
 expense_relevance_prompt: |
   <image>
   Is this relevant to a business expense claim?
+
+# Minimal simplified prompt to force SROIE schema output
+minimal_sroie_prompt: |
+  <image>
+  Output JSON with these exact keys:
+  {
+  "date_value": "",
+  "store_name_value": "",
+  "tax_value": "",
+  "total_value": "",
+  "prod_item_value": [],
+  "prod_quantity_value": [],
+  "prod_price_value": []
+  }
