--- a/.env
+++ b/.env
@@ -83,8 +83,8 @@ INTERNVL_SAVE_PREDICTIONS=true
 # Use original Huaifeng prompts for compatibility
 # INTERNVL_PROMPT_NAME=huaifeng_receipt_json_prompt
 
-# Use minimal simplified prompt to test model behavior
-INTERNVL_PROMPT_NAME=minimal_sroie_prompt
+# Use ultra-strict JSON prompt to force proper syntax
+INTERNVL_PROMPT_NAME=ultra_strict_json_prompt
 
 # Use for conference document analysis
 # INTERNVL_PROMPT_NAME=conference_relevance_prompt
