:sparkles: Add validation and error correction for JSON extraction; enhance JSON prompt for improved syntax enforcement

--- a/.env
+++ b/.env
@@ -83,8 +83,8 @@ INTERNVL_SAVE_PREDICTIONS=true
 # Use original Huaifeng prompts for compatibility
 # INTERNVL_PROMPT_NAME=huaifeng_receipt_json_prompt
 
-# Use ultra-strict JSON prompt to force proper syntax
-INTERNVL_PROMPT_NAME=ultra_strict_json_prompt
+# Use enhanced JSON prompt with comprehensive error prevention  
+INTERNVL_PROMPT_NAME=enhanced_json_prompt
 
 # Use for conference document analysis
 # INTERNVL_PROMPT_NAME=conference_relevance_prompt
