:sparkles: Implement confidence scoring for JSON extraction; add configuration options and integrate with post-processing logic

--- a/.env
+++ b/.env
@@ -72,6 +72,18 @@ INTERNVL_TRANSFORMERS_LOG_LEVEL=ERROR
 INTERNVL_SAVE_PREDICTIONS=true
 
 # --------------------------------------------------------------------------
+# CONFIDENCE SCORING CONFIGURATION
+# --------------------------------------------------------------------------
+# Enable confidence scoring and selective reprocessing
+INTERNVL_ENABLE_CONFIDENCE_SCORING=true
+
+# Confidence threshold for reprocessing (0.0-1.0)
+INTERNVL_CONFIDENCE_THRESHOLD=0.7
+
+# Fallback prompt for low-confidence predictions
+INTERNVL_FALLBACK_PROMPT_NAME=ultra_strict_json_prompt
+
+# --------------------------------------------------------------------------
 # PROMPT TEMPLATE
 # --------------------------------------------------------------------------
 # The path to the YAML file containing prompts (already set above)
