--- a/.env
+++ b/.env
@@ -95,8 +95,8 @@ INTERNVL_FALLBACK_PROMPT_NAME=australian_optimized_prompt
 # Use original Huaifeng prompts for compatibility
 # INTERNVL_PROMPT_NAME=huaifeng_receipt_json_prompt
 
-# Use enhanced JSON prompt with comprehensive error prevention  
-INTERNVL_PROMPT_NAME=enhanced_json_prompt
+# Revert to known working prompt for emergency restore
+INTERNVL_PROMPT_NAME=australian_optimized_prompt
 
 # Use for conference document analysis
 # INTERNVL_PROMPT_NAME=conference_relevance_prompt
