:sparkles: Update prompt name for robust key-value extraction and add fallback for emergency restore

--- a/.env
+++ b/.env
@@ -95,8 +95,11 @@ INTERNVL_FALLBACK_PROMPT_NAME=australian_optimized_prompt
 # Use original Huaifeng prompts for compatibility
 # INTERNVL_PROMPT_NAME=huaifeng_receipt_json_prompt
 
-# Revert to known working prompt for emergency restore
-INTERNVL_PROMPT_NAME=australian_optimized_prompt
+# Use new key-value format for robust extraction (Phase 1 testing)
+INTERNVL_PROMPT_NAME=key_value_receipt_prompt
+
+# Fallback to known working JSON prompt for emergency restore
+# INTERNVL_PROMPT_NAME=australian_optimized_prompt
 
 # Use for conference document analysis
 # INTERNVL_PROMPT_NAME=conference_relevance_prompt
